chore: changes following reviewer feedback

--- a/src/pages/careers/senior-cloud-engineer.mdx
+++ b/src/pages/careers/senior-cloud-engineer.mdx
@@ -49,12 +49,10 @@ stack, and infrastructure along the way.
 - Excellent knowledge of cloud architecture design (e.g., AWS Well-Architected)
 - Experience building scalable, resilient, and secured applications
 - Experience with CI/CD & Infrastructure as Code (e.g., Terraform)
-- Proficient in Node.js and familiarity with either React or TypeScript
-- Experience with containerized applications and orchestration (e.g., Docker,
-  Fargate, Kubernetes)
-- Experience with automated testing, logging and monitoring
-- Experience with load balancing/proxies, network architecture and security
-- Experience managing Linux servers, shell scripting, SSH, etc.
+- Proficient in TypeScript and Node.js. Familiarity with React is a bonus
+- Experience with containerized applications and orchestration (e.g., Docker, Kubernetes)
+- Experience with automated testing
+- Good understanding of cloud topology
 - Excellent written and communication skills
 - Strong team player who is open to guiding colleagues on your areas of
   expertise
