--- a/tutorial/2021-03-18-questdb-and-prometheus-on-gke-autopilot.mdx
+++ b/tutorial/2021-03-18-questdb-and-prometheus-on-gke-autopilot.mdx
@@ -31,7 +31,7 @@ Thanks for another great contribution, Yitaek!
 
 ## Introduction
 
-Recently, I’ve been experimenting with QuestDB as the primary time-series
+Recently, I've been experimenting with QuestDB as the primary time-series
 database to stream and analyze IoT/financial data:
 
 - [Streaming Heart Rate Data with IoT Core and QuestDB](/tutorial/2021/02/05/streaming-heart-rate-data-with-iot-core-and-questdb/)
@@ -41,7 +41,7 @@ While I was able to validate the power of QuestDB in storing massive amounts of
 data and querying them quickly in those two projects, I was mostly running them
 on my laptop via Docker. In order to scale my experiments, I wanted to create a
 more production-ready setup, including monitoring and disaster recovery on
-Kubernetes. So in this guide, we’ll walk through setting up QuestDB on GKE with
+Kubernetes. So in this guide, we'll walk through setting up QuestDB on GKE with
 Prometheus and Velero.
 
 ## Prerequisites
@@ -56,7 +56,7 @@ Before getting started with the tutorial, you will need the following:
 
 ## Setting up GKE Autopilot
 
-As a DevOps engineer/SRE, I’m a huge fan of GKE since it provides a lot of
+As a DevOps engineer/SRE, I'm a huge fan of GKE since it provides a lot of
 features out of the box such as cluster autoscaling, network policy plugins, and
 managed Istio compared to other managed Kubernetes options available. Recently
 Google Cloud announced
@@ -68,7 +68,7 @@ In practice, this means that you are now charged for pod usage rather than
 paying for the compute and storage of the underlying Kubernetes nodes, making it
 a great choice for projects with unknown resource utilization.
 
-Creating a new GKE Autopilot cluster is also extremely simple. There’s no need
+Creating a new GKE Autopilot cluster is also extremely simple. There's no need
 to set up Terraform or VPCs/autoscalers/node groups. Simply create a Google
 Cloud account, navigate to
 [Google Kubernetes Engine](https://cloud.google.com/), enable the Kubernetes
@@ -85,10 +85,10 @@ import Screenshot from "@theme/Screenshot"
 
 Click on the "Configure" button under "Autopilot mode", give the cluster a name,
 and wait for a few minutes for the cluster to be ready. I went with the default
-name `autopilot-cluster-1` in the `us-east1` regio and left the networking and
+name `autopilot-cluster-1` in the `us-east1` region, and left the networking and
 advanced configuration sections with default values. To configure your
 Kubernetes context to interact with the cluster via Helm, fetch the credentials
-using the following gcloud command:
+using the following `gcloud` command:
 
 ```bash
 gcloud container clusters \
@@ -97,9 +97,10 @@ gcloud container clusters \
 
 ## Deploying QuestDB
 
-QuestDB provides an official Helm chart that deploys a single StatefulSet pod
-with 50Gi PVC by default. To install the chart, add the QuestDB Helm repo and
-deploy it by running the following:
+QuestDB provides
+[an official Helm chart](https://github.com/questdb/questdb-kubernetes) that
+deploys a single `StatefulSet` pod with 50Gi PVC by default. To install the
+chart, add the QuestDB Helm repo and deploy it by running the following:
 
 ```bash
 helm repo add questdb https://helm.questdb.io/
@@ -155,8 +156,9 @@ features became available.
 
 ### Expose Postgres port
 
-First, we need to modify the default QuestDB chart to expose port 8812 (Postgres
-endpoint). Create a new YAML file called questdb-values.yaml :
+First, we need to modify the default QuestDB chart to expose port `8812` which
+is the default Postgres endpoint. Create a new YAML file called
+`questdb-values.yaml` with the following contents:
 
 ```yaml title="questdb-values.yaml"
 service:
@@ -166,7 +168,7 @@ service:
       port: 8812
 ```
 
-Update the existing deployment:
+And pass this config file using Helm to update the existing deployment:
 
 ```bash
 helm upgrade --install questdb questdb/questdb -f questdb-values.yaml
@@ -174,18 +176,18 @@ helm upgrade --install questdb questdb/questdb -f questdb-values.yaml
 
 ### Install Prometheus Postgres exporter
 
-Prometheus Helm charts are managed by the `prometheus-community`:
+Prometheus Helm charts are maintained by the
+[prometheus community](https://prometheus-community.github.io/helm-charts/):
 
 ```bash
 helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
 ```
 
 Next, we need to modify the default values to scrape QuestDB and also disable
-default metrics since QuestDB doesn’t currently store pg_stat_database or
-pg_stat_activity . We also want Prometheus to scrape our metrics, so we need to
-add annotations specify our scrape port.
-
-Create another YAML file called exporter-values.yaml :
+default metrics since QuestDB doesn't currently expose `pg_stat_database` or
+`pg_stat_activity`. We also want Prometheus to scrape our metrics, so we need to
+add annotations specify our scrape port. Create another YAML file called
+`exporter-values.yaml` with the following contents:
 
 ```yaml title="exporter-values.yaml"
 config:
@@ -201,14 +203,14 @@ config:
   prometheus.io/port: '9187'
 ```
 
-Now we can install Postgres Exporter:
+Now we can pass this file via Helm to install the Postgres exporter:
 
 ```bash
 helm upgrade -i postgres-exporter prometheus-community/prometheus-postgres-exporter -f exporter-values.yaml
 ```
 
 Finally, we can install Prometheus to collect these metrics. Create a new YAML
-file to hold our Prometheus configurations, prometheus-values.yaml :
+file to hold our Prometheus configurations called `prometheus-values.yaml`:
 
 ```yaml title="prometheus-values.yaml"
 alertmanager:
@@ -219,21 +221,23 @@ pushgateway:
   enabled: false
 ```
 
-Since we don’t have many metrics from QuestDB yet, we will only deploy the
-Prometheus server and accept the default configurations.
+Since we don't have many metrics from QuestDB yet, we will only deploy the
+Prometheus server and accept the default configuration:
 
 ```bash
 helm upgrade -i prometheus prometheus-community/prometheus -f prometheus-values.yaml
 ```
 
-Access the dashboard to run our queries by port-forwarding:
+Access the Prometheus dashboard using port-forwarding to run some example
+queries:
 
 ```bash
 export POD_NAME=$(kubectl get pods --namespace default -l \ "app=prometheus,component=server" -o jsonpath="{.items[0].metadata.name}")
   kubectl --namespace default port-forward $POD_NAME 9090
 ```
 
-Open up localhost:9090 and check that we’re able to scrape pg_up :
+Once port-forwarding is active, visit [localhost:9090](localhost:9090) and check
+that we're able to scrape `pg_up`:
 
 <Screenshot
   alt="A screenshot of Prometheus monitoring the uptime of a QuestDB instance"
@@ -242,8 +246,8 @@ Open up localhost:9090 and check that we’re able to scrape pg_up :
   width={650}
 />
 
-(Note: If you are looking for a production-ready monitoring setup, please refer
-to the four-part series
+If you are looking for a production-ready monitoring setup, please refer to my
+four-part series
 [Practical monitoring with Prometheus and Grafana](https://yitaek.medium.com/practical-monitoring-with-prometheus-grafana-part-i-22d0f172f993).)
 
 ## Automated Velero backups
@@ -251,9 +255,9 @@ to the four-part series
 [Velero](https://velero.io/) is an open-source tool to back up and restore
 Kubernetes resources and persistent volumes. This is useful for disaster
 recovery (taking snapshots) or for data migration. Velero runs inside the
-Kubernetes cluster and integrates with various storage providers (e.g. AWS S3,
+Kubernetes cluster and integrates with various storage providers (e.g., AWS S3,
 GCP Storage, Minio) as well as [restic](https://velero.io/docs/v1.5/restic/) to
-take snapshots either on-demand or on a schedule.
+take snapshots either on-demand or on a specified schedule.
 
 ### Installation
 
@@ -264,10 +268,9 @@ behind slightly with compatible Docker images.
 
 ```bash
 # for MacOS
-$ brew install velero
-
+brew install velero
 # for Windows
-$ choco install velero
+choco install velero
 ```
 
 ### Valero configuration
@@ -323,7 +326,7 @@ gcloud projects add-iam-policy-binding $PROJECT_ID \
 gsutil iam ch serviceAccount:$SERVICE_ACCOUNT_EMAIL:objectAdmin gs://${BUCKET}
 ```
 
-Download the service account key and save it as credential-velero :
+Download the service account key and save it as `credential-velero`:
 
 ```bash
 gcloud iam service-accounts keys create credentials-velero \
@@ -340,7 +343,7 @@ velero install \
     --secret-file ./credentials-velero
 ```
 
-Finally, we can create a schedule using cron string:
+Finally, we can create a schedule using a `cron`-like string:
 
 ```bash
 velero schedule create \
@@ -349,7 +352,7 @@ velero schedule create \
   --include-namespaces default
 ```
 
-We can verify backups being made in our bucket:
+Lastly, verify backups are being made in our bucket:
 
 <Screenshot
   alt="Incremental backups of QuestDB in a storage bucket on Google Cloud"
@@ -358,19 +361,21 @@ We can verify backups being made in our bucket:
   width={650}
 />
 
-For a deep-dive on Velero, refer to
-[Disaster recovery on Kubernetes](https://medium.com/dev-genius/disaster-recovery-on-kubernetes-98c5c78382bb).
+For more information on Valero, my article about
+[Disaster recovery on Kubernetes](https://medium.com/dev-genius/disaster-recovery-on-kubernetes-98c5c78382bb)
+provides a deep-dive into the service features and describes why you should
+check it out.
 
 ## Next Steps
 
-To optimize for performance, QuestDB opted to build a time-series database from
-scratch with ANSI SQL compatibility, as opposed to building on top of Postgres
-like TimescaleDB. Also, as a newer product, QuestDB is working on enterprise
-features (e.g. replication, high-availability, recovery from snapshot) and
-integrations with other popular projects. Still, with Prometheus Postgres
+To optimize for performance, QuestDB decided to build a time series database
+from scratch with ANSI SQL compatibility, as opposed to building on top of
+Postgres like TimescaleDB. Also, as a newer product, QuestDB is working on
+enterprise features (e.g., replication, high-availability, recovery from
+snapshot) and integrations with other popular projects. With Prometheus Postgres
 exporter and Velero, we can configure a production-ready QuestDB on Kubernetes.
-I look forward to enhancing this setup in future releases when monitoring and
-ops features will be supported.
+I look forward to enhancing this setup in future releases when more monitoring
+and ops features will be added.
 
 If you like this content, we'd love to know your thoughts! Feel free to share
 your feedback or just come and say hello in the
