--- a/tutorial/2021-03-18-questdb-and-prometheus-on-gke-autopilot.mdx
+++ b/tutorial/2021-03-18-questdb-and-prometheus-on-gke-autopilot.mdx
@@ -31,8 +31,8 @@ Thanks for another great contribution, Yitaek!
 
 ## Introduction
 
-Recently, I've been experimenting with QuestDB as the primary time-series
-database to stream and analyze IoT/financial data:
+Recently, I've been experimenting with QuestDB as a primary time series database
+to stream and analyze IoT and financial data:
 
 - [Streaming Heart Rate Data with IoT Core and QuestDB](/tutorial/2021/02/05/streaming-heart-rate-data-with-iot-core-and-questdb/)
 - [Realtime Crypto Tracker with Kafka and QuestDB](/tutorial/2021/02/18/realtime-crypto-tracker-with-kafka-and-questdb/)
@@ -57,9 +57,9 @@ Before getting started with the tutorial, you will need the following:
 ## Setting up GKE Autopilot
 
 As a DevOps engineer/SRE, I'm a huge fan of GKE since it provides a lot of
-features out of the box such as cluster autoscaling, network policy plugins, and
-managed Istio compared to other managed Kubernetes options available. Recently
-Google Cloud announced
+features out of the box, such as cluster autoscaling, network policy plugins,
+and managed Istio compared to other managed Kubernetes options available.
+Recently Google Cloud announced
 [GKE Autopilot](https://cloud.google.com/blog/products/containers-kubernetes/introducing-gke-autopilot),
 a new mode that further automates Kubernetes operations, including node
 management, security/hardening, and resource optimization. It brings together
@@ -69,10 +69,10 @@ paying for the compute and storage of the underlying Kubernetes nodes, making it
 a great choice for projects with unknown resource utilization.
 
 Creating a new GKE Autopilot cluster is also extremely simple. There's no need
-to set up Terraform or VPCs/autoscalers/node groups. Simply create a Google
-Cloud account, navigate to
+to set up Terraform or VPCs/autoscalers/node groups. To get started, create a
+Google Cloud account, navigate to
 [Google Kubernetes Engine](https://cloud.google.com/), enable the Kubernetes
-Engine API, and click on "Create Cluster":
+Engine API, and click on **Create Cluster**:
 
 import Screenshot from "@theme/Screenshot"
 
@@ -83,12 +83,12 @@ import Screenshot from "@theme/Screenshot"
   width={400}
 />
 
-Click on the "Configure" button under "Autopilot mode", give the cluster a name,
-and wait for a few minutes for the cluster to be ready. I went with the default
-name `autopilot-cluster-1` in the `us-east1` region, and left the networking and
-advanced configuration sections with default values. To configure your
-Kubernetes context to interact with the cluster via Helm, fetch the credentials
-using the following `gcloud` command:
+Click on the **Configure** button under "Autopilot mode", give the cluster a
+name, and wait for a few minutes for the cluster to be ready. I went with the
+default name `autopilot-cluster-1` in the `us-east1` region, and left the
+networking and advanced configuration sections with default values. To configure
+your Kubernetes context to interact with the cluster via Helm, fetch the
+credentials using the following `gcloud` command:
 
 ```bash
 gcloud container clusters \
@@ -144,13 +144,13 @@ StatefulSet and Service sections need to be changed to allow probes to
 periodically check this endpoint.
 
 QuestDB currently does not provide a comprehensive metrics endpoint that
-natively integrates with Prometheus or Postgres, but there are open Github
+natively integrates with Prometheus or Postgres, but there are open GitHub
 issues listed below for these features:
 
 - [[#837] Add support for exposing database state similar to pg_stat_database and pg_stat_activity](https://github.com/questdb/questdb/issues/837)
 - [[#532] Add Prometheus metrics endpoint](https://github.com/questdb/questdb/issues/532)
 
-Still, I wanted to deploy Prometheus Postgres Exporter to at least track QuestDB
+I wanted to deploy Prometheus Postgres Exporter to at least track QuestDB
 up/down status and set up the framework to monitor Postgres metrics once these
 features became available.
 
@@ -372,10 +372,10 @@ To optimize for performance, QuestDB decided to build a time series database
 from scratch with ANSI SQL compatibility, as opposed to building on top of
 Postgres like TimescaleDB. Also, as a newer product, QuestDB is working on
 enterprise features (e.g., replication, high-availability, recovery from
-snapshot) and integrations with other popular projects. With Prometheus Postgres
-exporter and Velero, we can configure a production-ready QuestDB on Kubernetes.
-I look forward to enhancing this setup in future releases when more monitoring
-and ops features will be added.
+snapshot) and integrations with other popular projects. With the Prometheus
+Postgres exporter and Velero, we can configure a production-ready QuestDB on
+Kubernetes. I look forward to enhancing this setup in future releases when more
+monitoring and ops features will be added.
 
 If you like this content, we'd love to know your thoughts! Feel free to share
 your feedback or just come and say hello in the
