chore: typo in section heading

--- a/tutorial/2021-03-18-questdb-and-prometheus-on-gke-autopilot.mdx
+++ b/tutorial/2021-03-18-questdb-and-prometheus-on-gke-autopilot.mdx
@@ -366,7 +366,7 @@ For more information on Valero, my article about
 provides a deep-dive into the service features and describes why you should
 check it out.
 
-## Next Steps
+## Next steps
 
 To optimize for performance, QuestDB decided to build a time series database
 from scratch with ANSI SQL compatibility, as opposed to building on top of
