--- a/src/pages/careers/front-end-engineer.mdx
+++ b/src/pages/careers/front-end-engineer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Software Engineer, Front End | Careers at QuestDB
+title: Software Engineer, Frontend | Careers at QuestDB
 wrapperClassName: career
 ---
 
