--- a/src/pages/careers/senior-cloud-engineer.mdx
+++ b/src/pages/careers/senior-cloud-engineer.mdx
@@ -35,10 +35,14 @@ stack, and infrastructure along the way.
 
 <h2>Responsibilities</h2>
 
-- Design, implement, and maintain a multi-cloud offering for our customers
+- Create a multi-cloud offering for our customers from the ground up
 - Own the rollout and deployment to customers
-- Build monitoring and logging infrastructure
-- Build tools to reduce occurrences of errors and improve customer experience
+- Full task automation, such as resources provisioning, cloud backup,
+  monitoring, scaling data ingress, scaling number of requests, logging,
+  optimization of compute and storage resources
+- Design and implement Kubernetes orchestration operator
+- Configuration of cloud network interfaces
+- Build tools which reduce occurrences of errors and improve customer experience
 - Design procedures for system troubleshooting and maintenance
 - Manage project priorities, deadlines, and deliverables as part of a
   self-organizing team
@@ -49,15 +53,22 @@ stack, and infrastructure along the way.
 - Excellent knowledge of cloud architecture design (e.g., AWS Well-Architected)
 - Experience building scalable, resilient, and secured applications
 - Experience with CI/CD & Infrastructure as Code (e.g., Terraform)
-- Proficient in TypeScript and Node.js. Familiarity with React is a bonus
+- Proficient with Kubernetes
+- Proficient with Node.js and TypeScript
 - Experience with containerized applications and orchestration (e.g., Docker,
   Kubernetes)
-- Experience with automated testing
-- Good understanding of cloud topology
+- Experience with automated testing, logging and monitoring
+- Experience building scalable public APIs
+- Experience with SQL
 - Excellent written and communication skills
 - Strong team player who is open to guiding colleagues on your areas of
   expertise
-- The ability to understand, shape and deliver against customers' requirements
+
+A candidate who has any of the following skills would stand out:
+
+- Experience with React
+- Experience with C++ and Java
+- Interest in low-level programming
 
 <h2>Working at QuestDB</h2>
 
