--- a/src/pages/careers/senior-cloud-engineer.mdx
+++ b/src/pages/careers/senior-cloud-engineer.mdx
@@ -25,40 +25,36 @@ As a Senior Cloud Engineer, you will be a critical part of our growing company,
 leading the design and launch of a greenfield cloud-hosted database as a service
 (DBaaS) solution. Ideally, you have a background as a full-stack software
 engineer, and you specialize in cloud-native technologies, distributed systems,
-and orchestration platforms. You will bring your expertise to plan, design,
-document, and maintain the technologies and infrastructure needed to build a
-scalable and secure cloud offering of our time series database. You have an
-affinity for best practices in automating operations, infrastructure security,
-and software development. You'll have the chance to work in an open and
-collaborative environment to improve our existing development tools, technology
-stack, and infrastructure along the way.
+and orchestration platforms.
 
 <h2>Responsibilities</h2>
 
 - Create a multi-cloud offering for our customers from the ground up
+- Design and implement Kubernetes orchestration operator
+- Design procedures for troubleshooting and maintenance of the DBaaS system
 - Own the rollout and deployment to customers
+- Automating resource provisioning including compute and storage resources,
+  logging, and monitoring
+- Automating resource management such as scaling data ingress and egress,
+  load-balancing, and backups
 - Full task automation, such as resources provisioning, cloud backup,
   monitoring, scaling data ingress, scaling number of requests, logging,
   optimization of compute and storage resources
-- Design and implement Kubernetes orchestration operator
-- Configuration of cloud network interfaces
 - Build tools which reduce occurrences of errors and improve customer experience
 - Design procedures for system troubleshooting and maintenance
-- Manage project priorities, deadlines, and deliverables as part of a
-  self-organizing team
+- Configuration of cloud network interfaces
 
 <h2>Requirements</h2>
 
 - 5+ years experience working with cloud technologies
 - Excellent knowledge of cloud architecture design (e.g., AWS Well-Architected)
 - Experience building scalable, resilient, and secured applications
-- Experience with CI/CD & Infrastructure as Code (e.g., Terraform)
-- Proficient with Kubernetes
 - Proficient with Node.js and TypeScript
-- Experience with containerized applications and orchestration (e.g., Docker,
-  Kubernetes)
+- Proficient with Kubernetes
+- Experience with CI/CD & Infrastructure as Code (e.g., Terraform)
 - Experience with automated testing, logging and monitoring
-- Experience building scalable public APIs
+- Experience with load balancing/proxies, network architecture and security
+- Experience building a scaling public APIs
 - Experience with SQL
 - Excellent written and communication skills
 - Strong team player who is open to guiding colleagues on your areas of
