--- a/tutorial/2021-03-31-automating-etl-jobs-on-time-series-data-on-gcp.mdx
+++ b/tutorial/2021-03-31-automating-etl-jobs-on-time-series-data-on-gcp.mdx
@@ -143,7 +143,7 @@ Some seconds later, the rule will be applied on every instance with the matching
 this port will be used by the Cloud Function later to connect to the database.
 
 If you try to open the interactive console again, you should see the
-[QuestDB Web Console](https://questdb.io/docs/reference/web-console/) and start
+[QuestDB Web Console](/docs/reference/web-console/) and start
 writing queries.
 
 <Screenshot
@@ -165,7 +165,7 @@ CREATE TABLE
 The query above uses `timestamp(purchase_date)` to set a designated timestamp on
 the table so we can easily perform time series analysis in QuestDB. For more
 information on designated timestamps, see the official
-[QuestDB documentation for timestamp](https://questdb.io/docs/concept/designated-timestamp/).
+[QuestDB documentation for timestamp](/docs/concept/designated-timestamp/).
 
 ### Create a Storage bucket
 
