chore: typo fix

--- a/tutorial/2021-04-12-ethereum.mdx
+++ b/tutorial/2021-04-12-ethereum.mdx
@@ -252,6 +252,5 @@ streaming application to Kubernetes following the
 [instructions on this GitHub repository](https://github.com/blockchain-etl/blockchain-etl-streaming).
 
 If you like this content, we'd love to know your thoughts! Feel free to share
-your feedback, browse the
-[GitHub repository for this tutorial](https://github.com/gabor-boros/questdb-etl-jobs),
-or come and say hello in the [QuestDB Community Slack]({@slackUrl@}).
+your feedback or come and say hello in the
+[QuestDB Community Slack]({@slackUrl@}).
