Update and rename head-of-developer-relations.mdx to developer-relations-engineer.mdx

--- a/src/pages/careers/developer-relations-engineer.mdx
+++ b/src/pages/careers/developer-relations-engineer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Head of Developer Relations | Careers at QuestDB
+title: Developer Relations Engineer | Careers at QuestDB
 wrapperClassName: career
 ---
 
@@ -25,9 +25,12 @@ Helping developers solve their problems is at the center of what we do. Your
 role will consist of engaging with the user base and orchestrating the growth of
 our open source communities.
 
+We are looking for an individual who is passionate about data, driven to spur continuous awareness 
+of a very technical product and enjoys interacting with community members on a daily basis. 
+
 This is an open-ended role with a substantial degree of autonomy. You will have
-full liberty to develop outreach channels such as promoting content to spur
-adoption, planning events, marketing, PR and social media initiatives, as well
+full liberty to develop outreach channels and partnerships to spur
+adoption, planning events, webinars, podcasts, marketing, social media initiatives, as well
 as any additional direction you will deem relevant.
 
 <h2>Responsibilities</h2>
@@ -39,21 +42,24 @@ as any additional direction you will deem relevant.
   and grow our Slack community. Manage outreach to developers online moderating
   day-to-day community activity in the discussion forums and via conferences,
   webinars, events, workshops, etc
-- Create content: Work with the entire team to create technical articles and
-  blog posts for developers
-- Identify strategic partnership opportunities to grow our developer community
+- Work in tandem with our content team to create technical articles, tutorials and
+  youtube content for developers
+- Identify strategic partnership opportunities to grow awareness
+- Build and deliver technical training workshops using QuestDB and other tools in the
+  open source ecosystem
+
 
 <h2>Requirements</h2>
 
 - 3+ years of experience in community development
 - Passionate about open source and the developer community
-- Time-series database knowledge preferred
+- Time-series database and SQL knowledge preferred
 - Strong writing and communication skills
-- Marketing experience is a plus
 - Relationships in prominent Open Source communities is a plus
 - Familiarity with cloud native technologies and observability tools
 - Excellent spoken and written English
-- Analytical mindset
+- Background as software developer is a plus
+- Entrepreneurial mindset is a plus 
 
 <h2>Working at QuestDB</h2>
 
@@ -68,4 +74,4 @@ technology to power the infrastructure of tomorrow.
 - Our team is ambitious and tackles the most difficult problems at the deepest
   data infrastructure layer.
 
-<CareerEmailUs title="Head of Developer Relations" />
+<CareerEmailUs title="Developer Relations Engineer" />
