--- a/src/pages/careers/head-of-developer-relations.mdx
+++ b/src/pages/careers/head-of-developer-relations.mdx
@@ -49,11 +49,11 @@ as any additional direction you will deem relevant.
 - Passionate about open source and the developer community
 - Time-series database knowledge preferred
 - Strong writing and communication skills
-- Familiarity with cloud native technologies and observability tools
+- Familiarity with cloud-native technologies and observability tools
 - Excellent spoken and written English
 - Analytical mindset
 - Marketing experience is a plus
-- Relationships in prominent Open Source communities is a plus
+- Relationships in prominent open source communities is a plus
 
 <h2>Working at QuestDB</h2>
 
