--- a/src/pages/careers/senior-cloud-engineer.mdx
+++ b/src/pages/careers/senior-cloud-engineer.mdx
@@ -49,7 +49,7 @@ and orchestration platforms.
 - 5+ years experience working with cloud technologies
 - Excellent knowledge of cloud architecture design (e.g., AWS Well-Architected)
 - Experience building scalable, resilient, and secured applications
-- Proficient with Node.js and TypeScript
+- Must have programming ability with proficiency in Python OR Node.js / TypeScript
 - Proficient with Kubernetes
 - Experience with CI/CD & Infrastructure as Code (e.g., Terraform)
 - Experience with automated testing, logging and monitoring
