chore: minor edit to meta desc

--- a/src/pages/time-series-benchmark-suite.mdx
+++ b/src/pages/time-series-benchmark-suite.mdx
@@ -1,7 +1,8 @@
 ---
 title: Time Series Benchmark Suite
 description:
-  Benchmarking database performance using the time series benchmark suite
+  Measure time series database performance in high-throughput ingestion
+  scenarios using the time series benchmark suite
 wrapperClassName: supplemental
 keywords:
   - clickhouse
