chore: remove global var for Slack URL

--- a/src/pages/time-series-benchmark-suite.mdx
+++ b/src/pages/time-series-benchmark-suite.mdx
@@ -161,9 +161,9 @@ by our reference benchmark `m5.8xlarge` instance on AWS.
 <h2>Contributing to the Time Series Benchmark Suite</h2>
 
 We have opened a pull request
-([#157 - Questdb benchmark support](https://github.com/timescale/tsbs/issues/157)) in
-TimescaleDB's TSBS GitHub repository which adds the ability to run the benchmark
-against QuestDB. In the meantime, readers may clone
+([#157 - Questdb benchmark support](https://github.com/timescale/tsbs/issues/157))
+in TimescaleDB's TSBS GitHub repository which adds the ability to run the
+benchmark against QuestDB. In the meantime, readers may clone
 [our fork of the benchmark suite](https://github.com/questdb/tsbs) and run the
 tests to see the results for themselves.
 
@@ -181,5 +181,5 @@ particular use case.
 
 If you would like to know more about QuestDB and how it can solve problems that
 arise when dealing with large amounts of time series data, feel free to
-[Join the Community Slack]({@slackUrl@}) or view our
+[Join the Community Slack](https://slack.questdb.io/) or view our
 [enterprise page](/enterprise/) for an overview of the solutions we offer.
