--- a/src/pages/careers/front-end-engineer.mdx
+++ b/src/pages/careers/front-end-engineer.mdx
@@ -21,7 +21,7 @@ capital firms and Y Combinator.
 
 <h2>The role</h2>
 
-As a Lead Software Engineer, Frontend, you will be a critical part of our growing
+As a Lead Software Engineer, you will be a critical part of our growing
 company. You will be instrumental in creating a product that looks and feels
 great as an integrated entity. While you will primarily focus on frontend
 development, we will actively include you in every step of the database engine's
